--- a/Nhom-01/source/app/src/main/res/values/colors.xml
+++ b/Nhom-01/source/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="card">#355C7D </color>
     <color name="colorPrimary">#F20A44</color>
     <color name="colorPrimaryDark">#AC36B9</color>
     <color name="colorAccent">#47EE0F</color>
